# Projeto-Sementes

./: .bash_history  .gitconfig  .gitignore  README.md
automacao_api_python/Desafio1/: main.py  readme.md  requirements.txt  test_desafio1.py  usuario.py
automacao_api_python/Desafio2/: main.py  readme.md
automacao_api_python/Desafio3/: main.py  readme.md  requirements.txt
automacao_api_python/Exercicio1/: main.py  requirements.txt
automacao_api_python/Exercicio2_BDD/: main.py
automacao_api_python/Exercicio3/: requirements.txt
automacao_web_python/Desafio/: main.py  requirements.txt
automacao_web_python/Exercicio_Locators/: pyproject.toml
automacao_web_python/Exercicio_Locators/exercicio_locators/: main.py
java/desafio_1/: README.md
java/desafio_10/: readme.md
java/desafio_11/: readme.md
java/desafio_12/: readme.md
java/desafio_13/: readme.md
java/desafio_14/: readme.md
java/desafio_2/: README.md
java/desafio_3/: README.md
java/desafio_4/: readme.md
java/desafio_5/: readme.md
java/desafio_6/: readme.md
java/desafio_7/: readme.md
java/desafio_8/: readme.md
java/desafio_9/: readme.md
logica_de_programacao/desafio_1/: README.md
logica_de_programacao/desafio_10/: README.md
logica_de_programacao/desafio_11/: README.md
logica_de_programacao/desafio_12/: README.md
logica_de_programacao/desafio_13/: README.md  pyproject.toml
logica_de_programacao/desafio_14/: README.md
logica_de_programacao/desafio_2/: README.md
logica_de_programacao/desafio_3/: README.md
logica_de_programacao/desafio_4/: README.md  pyproject.toml
(+78 files in other folders)
